<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderActivity">

    <ImageView
        android:id="@+id/imageVieworderbg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/room1"
        android:scaleType="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/textViewaptname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/heritage_apartment"
        app:layout_constraintTop_toBottomOf="@id/imageVieworderbg"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="23sp"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/textVieworderhead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_booking_information"
        app:layout_constraintTop_toBottomOf="@id/textViewaptname"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:textColor="@color/white"
        android:textSize="21sp"
        android:padding="8dp"
        android:background="@drawable/bordertotal"/>

    <TextView
        android:id="@+id/textViewroomtype"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/room_type"
        app:layout_constraintTop_toBottomOf="@id/textVieworderhead"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:textSize="19sp"
        android:textColor="@color/black"
        />

    <TextView
        android:id="@+id/textViewcheckindate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_in_date_order"
        app:layout_constraintTop_toBottomOf="@id/textViewroomtype"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textStyle="bold"
        android:textSize="19sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/textViewcheckoutdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_out_date_ordeer"
        app:layout_constraintTop_toBottomOf="@id/textViewcheckindate"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textStyle="bold"
        android:textSize="19sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/textViewtotalorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_amount"
        app:layout_constraintTop_toBottomOf="@id/textViewcheckoutdate"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textStyle="bold"
        android:textSize="19sp"
        android:textColor="@color/black"/>

</androidx.constraintlayout.widget.ConstraintLayout>