<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailedActivity">

    <ImageView
        android:id="@+id/imageViewbg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/room1"
        android:scaleType="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageView
        android:id="@+id/imageViewsize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/room_size2"
        app:layout_constraintTop_toBottomOf="@id/imageViewbg"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"/>

    <ImageView
        android:id="@+id/imageViewdistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/train"
        app:layout_constraintTop_toBottomOf="@id/imageViewsize"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/textViewsize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/room_size_28_meter"
        app:layout_constraintLeft_toRightOf="@id/imageViewsize"
        app:layout_constraintTop_toBottomOf="@id/imageViewbg"
        android:layout_marginTop="9dp"
        android:layout_marginLeft="10dp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/textViewsqft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_2"
        app:layout_constraintLeft_toRightOf="@id/textViewsize"
        app:layout_constraintTop_toBottomOf="@id/imageViewbg"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="12dp"
        android:textSize="9sp"/>

    <TextView
        android:id="@+id/textViewdistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_10_mins_to_city_center"
        app:layout_constraintLeft_toRightOf="@id/imageViewdistance"
        app:layout_constraintTop_toBottomOf="@id/textViewsize"
        android:layout_marginTop="17dp"
        android:layout_marginLeft="10dp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/textViewfacilities"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/facilities"
        app:layout_constraintTop_toBottomOf="@id/imageViewdistance"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="19sp"/>

    <TextView
        android:id="@+id/textViewfacilitieslist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="● House Keeping  ● Toiletries  ● Wi-Fi  ● Mini Bar"
        app:layout_constraintTop_toBottomOf="@id/textViewfacilities"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:textColor="@color/Purple"
        android:textSize="16sp"
        android:textStyle="bold"
        android:background="@drawable/border"
        android:padding="5dp"
        android:elevation="5dp"/>

    <TextView
        android:id="@+id/textViewBooking"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_booking_date"
        app:layout_constraintTop_toBottomOf="@id/textViewfacilitieslist"
        android:layout_marginTop="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:paddingLeft="5dp"
        android:background="@color/Purple"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:paddingVertical="4dp"/>

    <TextView
        android:id="@+id/buttonCheckin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_in_date"
        app:layout_constraintTop_toBottomOf="@id/textViewBooking"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:background="@drawable/bordercalender"
        android:padding="5dp"
        />

    <TextView
        android:id="@+id/CheckinDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="01/01/2022"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/buttonCheckin"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@drawable/border"
        android:paddingLeft="15dp"
        android:paddingRight="10dp"
        android:paddingVertical="5dp"
        android:textSize="19sp"
        android:layout_marginLeft="10dp"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:drawableRight="@drawable/calendar"/>

    <TextView
        android:id="@+id/buttonCheckout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_out_date"
        app:layout_constraintTop_toBottomOf="@id/textViewBooking"
        app:layout_constraintLeft_toRightOf="@id/buttonCheckin"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="90dp"
        android:backgroundTint="@color/LightBLue"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:background="@drawable/bordercalender"
        android:padding="5dp"/>

    <TextView
        android:id="@+id/CheckoutDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="01-01-2022"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/buttonCheckin"
        app:layout_constraintLeft_toRightOf="@id/CheckinDate"
        android:background="@drawable/border"
        android:paddingLeft="15dp"
        android:paddingRight="10dp"
        android:paddingVertical="5dp"
        android:textSize="19sp"
        android:layout_marginLeft="55dp"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:drawableRight="@drawable/calendar"/>

    <TextView
        android:id="@+id/textViewRoom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_room_type"
        app:layout_constraintTop_toBottomOf="@id/CheckinDate"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:paddingLeft="5dp"
        android:background="@color/Purple"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:paddingVertical="4dp"/>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="210dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@id/textViewRoom"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="10dp"
        android:textSize="11sp"
        android:background="@drawable/border"
        android:padding="5dp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/textViewTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total"
        app:layout_constraintRight_toLeftOf="@id/textViewTotalRM"
        app:layout_constraintTop_toBottomOf="@id/textViewRoom"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="17dp"
        android:layout_marginRight="5dp"/>

    <TextView
        android:id="@+id/textViewTotalRM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="RM 0.0"
        app:layout_constraintTop_toBottomOf="@id/textViewRoom"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/bordertotal"
        android:paddingHorizontal="12dp"
        android:paddingVertical="10dp"/>

    <Button
        android:id="@+id/buttonbook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/book_now"
        app:layout_constraintTop_toBottomOf="@id/textViewTotalRM"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp"
        android:textSize="18sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>